--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,7 @@ This file is used to contain all vendor imports.
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+@import url("https://fonts.googleapis.com/css?family=Roboto+Mono:400,700|Source+Sans+Pro:700&display=swap");
 html {
   line-height: 1.15;
   /* 1 */
@@ -310,14 +311,106 @@ template {
 This file is used to contain all abstracts imports.
 Files inside this folder can contain abstract settings, helpers or functions. They have no direct output.
 */
+/* COLOR VARIABLES */
+/* Primary colors */
+/* Secondary colors */
+/* Neutral colors */
+/* TYPOGRAPHY VARIABLES */
+/* BOX-SHADOWS */
 /*
 This file is used to contain all base imports.
 Files inside this folder can contain global styles used in the project.
 */
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  box-sizing: border-box; }
+
+/* Here I add the style of my typography */
+html {
+  font-size: 112.5%; }
+
+/*18px*/
+body {
+  font-family: "Roboto Mono", monospace;
+  font-weight: 400;
+  line-height: 1.65;
+  color: #616e7c; }
+
+p {
+  margin-bottom: 1.15rem; }
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  margin: 2.75rem 0 1.05rem;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 400;
+  line-height: 1.15; }
+
+h1 {
+  margin-top: 0;
+  font-size: 2.488rem; }
+
+h2 {
+  font-size: 2.074rem; }
+
+h3 {
+  font-size: 1.728rem; }
+
+h4 {
+  font-size: 1.44rem; }
+
+h5 {
+  font-size: 1.2rem; }
+
+small,
+.text_small {
+  font-size: 0.833rem; }
+
 /*
 This file is used to contain all component imports.
 Files inside this folder should contain all styles relating to a reusable component.
 */
+.btn {
+  /* Base styling */
+  display: inline-block;
+  background-color: #35469c;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 0.75rem 1.5rem;
+  border-radius: 50rem;
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1);
+  transition: all 0.25s;
+  /* Fonts */
+  font-family: "Roboto Mono", monospace;
+  font-size: 0.833rem;
+  font-weight: 700;
+  color: #fff; }
+  .btn:hover {
+    background-color: #19216c;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    transform: translateY(-2px); }
+  .btn--hollow {
+    border: 1px solid #35469c;
+    background-color: transparent;
+    color: #35469c;
+    box-shadow: none; }
+    .btn--hollow:hover {
+      border: 1px solid #19216c;
+      background-color: #19216c;
+      color: #fff;
+      transform: translateY(-2px); }
+  .btn--square {
+    border-radius: 8px; }
+
 /*
 This file is used to contain all component imports.
 Files inside this folder can contain specific element styles and layout.
