--- a/src/css/style.css
+++ b/src/css/style.css
@@ -331,6 +331,15 @@ Files inside this folder can contain global styles used in the project.
 html {
   box-sizing: border-box; }
 
+button {
+  display: inline-block;
+  border: none;
+  background-color: transparent; }
+
+a {
+  text-decoration: none;
+  color: #fff; }
+
 /* Here I add the style of my typography */
 html {
   font-size: 112.5%; }
@@ -415,3 +424,30 @@ Files inside this folder should contain all styles relating to a reusable compon
 This file is used to contain all component imports.
 Files inside this folder can contain specific element styles and layout.
 */
+.container {
+  max-width: 90%;
+  margin: 0 auto;
+  width: 55.5555rem; }
+  .container--small {
+    max-width: 90%;
+    margin: 0 auto;
+    width: 27.7777rem; }
+
+/* GRID LAYOUT */
+.wrapper {
+  display: grid;
+  grid-template-rows: 80vh; }
+
+.header {
+  background-color: #4c63b6;
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.links {
+  position: absolute;
+  right: 2rem;
+  top: 1rem; }
+  .links .link {
+    margin-left: 1rem; }
