--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -9,3 +9,14 @@
 html {
   box-sizing: border-box;
 }
+
+button {
+  display: inline-block;
+  border: none;
+  background-color: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
+}
