--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -25,3 +25,6 @@ $font-display: "Source Sans Pro", sans-serif;
 /* BOX-SHADOWS */
 $shadow-primary: 0px 4px 24px rgba(0, 0, 0, 0.1);
 $shadow-primary--hover: 0px 4px 12px rgba(0, 0, 0, 0.1);
+
+/* SPACING */
+$margin--lg: 5rem;
