--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -22,11 +22,13 @@ h4,
 h5 {
   margin: 2.75rem 0 1.05rem;
   font-family: $font-display;
+  color: $color-neutral--darker;
   font-weight: 400;
   line-height: 1.15;
 }
 
 h1 {
+  color: #fff;
   margin-top: 0;
   font-size: 2.488rem;
 }
@@ -48,6 +50,10 @@ h5 {
 }
 
 small,
-.text_small {
+.text--small {
   font-size: 0.833rem;
+  display: inline-block;
+  font-weight: 700;
+  color: $color-secondary;
+  margin-right: 1rem;
 }
