--- a/src/scss/layouts/_global.scss
+++ b/src/scss/layouts/_global.scss
@@ -1,15 +1,4 @@
 .container {
-  @include container-base;
-  width: 55.5555rem;
-
-  &--small {
-    @include container-base;
-    width: 27.7777rem;
-  }
-}
-
-/* GRID LAYOUT */
-.wrapper {
-  display: grid;
-  grid-template-rows: 80vh;
+  grid-template-rows: 70vh;
+  @include global-grid;
 }
