--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -1,18 +1,31 @@
 .header {
   background-color: $color-primary;
-  color: #fff;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
+  grid-row: 1 / 2;
+  grid-column: 1 / -1;
 
-.links {
-  position: absolute;
-  right: 2rem;
-  top: 1rem;
+  display: grid;
+  // grid-template-rows: 80vh;
+  grid-template-columns: minmax(5.555rem, 1fr) minmax(min-content, 55.555rem) minmax(
+      5.555rem,
+      1fr
+    );
+  margin-bottom: $margin--lg;
 
-  .link {
-    margin-left: 1rem;
+  .links {
+    grid-row: 1 / 2;
+    grid-column: 1 / -1;
+    justify-self: end;
+    margin: 1rem 2rem;
+
+    display: grid;
+    grid-template-columns: repeat(3, min-content);
+    gap: 1rem;
+  }
+
+  .heading {
+    color: #fff;
+    grid-row: 2 / 3;
+    grid-column: 2 / 3;
   }
 }
