--- a/src/scss/layouts/_projects.scss
+++ b/src/scss/layouts/_projects.scss
@@ -2,10 +2,11 @@
   grid-row: 2 / 3;
   grid-column: 2 / 3;
   row-gap: 5rem;
+  margin-top: 2rem;
 
   .project {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(24rem, 1fr));
 
     column-gap: 1.5rem;
     row-gap: 1rem;
