--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -10,6 +10,7 @@ $color-primary--light: #98aeeb;
 $color-secondary: #127fbf;
 $color-secondary--dark: #035388;
 $color-secondary--light: #2880ed;
+$color-secondary--lighter: #5ed0fa;
 
 /* Neutral colors */
 $color-neutral: #616e7c;
