--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -13,7 +13,7 @@
 
   padding-bottom: 3rem;
 
-  .links {
+  .social {
     grid-row: 1 / 2;
     grid-column: 1 / -1;
     justify-self: end;
@@ -21,7 +21,18 @@
 
     display: grid;
     grid-template-columns: repeat(3, min-content);
-    gap: 1rem;
+    gap: 1.4rem;
+
+    &__link {
+      color: #fff;
+      font-size: 1.8rem;
+      transition: all 0.25s;
+
+      &:hover {
+        color: $color-secondary--lighter;
+        transform: translateY(-2px);
+      }
+    }
   }
 
   .heading {
