--- a/src/css/style.css
+++ b/src/css/style.css
@@ -416,7 +416,7 @@ Files inside this folder should contain all styles relating to a reusable compon
   font-weight: 700;
   color: #fff; }
   .btn:hover {
-    background-color: #5ed0fa;
+    background-color: #19216c;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
     transform: translateY(-2px); }
   .btn--hollow {
@@ -425,8 +425,8 @@ Files inside this folder should contain all styles relating to a reusable compon
     color: #35469c;
     box-shadow: none; }
     .btn--hollow:hover {
-      border: 1px solid #5ed0fa;
-      background-color: #5ed0fa;
+      border: 1px solid #19216c;
+      background-color: #19216c;
       color: #fff;
       transform: translateY(-2px); }
   .btn--square {
@@ -446,7 +446,9 @@ Files inside this folder can contain specific element styles and layout.
   grid-row: 1 / 2;
   grid-column: 1 / -1;
   display: grid;
+  grid-template-rows: min-content 1fr;
   grid-template-columns: minmax(5.555rem, 1fr) minmax(min-content, 55.555rem) minmax(5.555rem, 1fr);
+  align-items: center;
   padding-bottom: 3rem; }
   .header .social {
     grid-row: 1 / 2;
@@ -461,8 +463,7 @@ Files inside this folder can contain specific element styles and layout.
       font-size: 1.8rem;
       transition: all 0.25s; }
       .header .social__link:hover {
-        color: #5ed0fa;
-        transform: translateY(-2px); }
+        transform: translateY(-4px); }
   .header .heading {
     color: #fff;
     grid-row: 2 / 3;
@@ -482,7 +483,8 @@ Files inside this folder can contain specific element styles and layout.
     margin-bottom: 5rem; }
     .projects .project__img {
       object-fit: cover;
-      background-position: center; }
+      background-position: center;
+      box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.1); }
     .projects .project__content .text--small {
       margin-bottom: 25px; }
     .projects .project__info h3 {
