--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -16,7 +16,7 @@
   color: #fff;
 
   &:hover {
-    background-color: $color-secondary--lighter;
+    background-color: $color-primary--darker;
     box-shadow: $shadow-primary--hover;
     transform: translateY(-2px);
   }
@@ -28,8 +28,8 @@
     box-shadow: none;
 
     &:hover {
-      border: 1px solid $color-secondary--lighter;
-      background-color: $color-secondary--lighter;
+      border: 1px solid $color-primary--darker;
+      background-color: $color-primary--darker;
       color: #fff;
       transform: translateY(-2px);
     }
