--- a/src/scss/layouts/_projects.scss
+++ b/src/scss/layouts/_projects.scss
@@ -17,6 +17,7 @@
     &__img {
       object-fit: cover;
       background-position: center;
+      box-shadow: $shadow-primary;
     }
 
     &__content {
